--- a/liquid.cabal
+++ b/liquid.cabal
@@ -23,31 +23,31 @@ Executable liquid
   --ghc-options: -O -W
   Extensions: 
 
-Library
-   Build-Depends:    base, containers, hashable, unordered-containers, 
-                     filepath, parsec, mtl, ghc, ghc-paths, process, 
-                     directory, hscolour, text, deepseq, filemanip, 
-                     bifunctors, ansi-terminal, cmdargs, syb, pretty, 
-                     liquid-fixpoint
-
-   Exposed-Modules: Language.Haskell.Liquid.Bare,
-                    Language.Haskell.Liquid.Constraint, 
-                    Language.Haskell.Liquid.Measure, 
-                    Language.Haskell.Liquid.Parse, 
-                    Language.Haskell.Liquid.GhcInterface, 
-                    Language.Haskell.Liquid.RefType, 
-                    Language.Haskell.Liquid.PredType, 
-                    Language.Haskell.Liquid.Predicates, 
-                    Language.Haskell.Liquid.ACSS, 
-                    Language.Haskell.Liquid.ANFTransform, 
-                    Language.Haskell.Liquid.Annotate, 
-                    Language.Haskell.Liquid.CTags, 
-                    Language.Haskell.Liquid.CmdLine, 
-                    Language.Haskell.Liquid.GhcMisc, 
-                    Language.Haskell.Liquid.Qualifier, 
-                    Language.Haskell.Liquid.TransformRec, 
-                    Language.Haskell.Liquid.Tidy, 
-                    Language.Haskell.Liquid.Types
-  --ghc-options: -O -W
-  Extensions: 
+-- Library
+--    Build-Depends:    base, containers, hashable, unordered-containers, 
+--                      filepath, parsec, mtl, ghc, ghc-paths, process, 
+--                      directory, hscolour, text, deepseq, filemanip, 
+--                      bifunctors, ansi-terminal, cmdargs, syb, pretty, 
+--                      liquid-fixpoint
+-- 
+--    Exposed-Modules: Language.Haskell.Liquid.Bare,
+--                     Language.Haskell.Liquid.Constraint, 
+--                     Language.Haskell.Liquid.Measure, 
+--                     Language.Haskell.Liquid.Parse, 
+--                     Language.Haskell.Liquid.GhcInterface, 
+--                     Language.Haskell.Liquid.RefType, 
+--                     Language.Haskell.Liquid.PredType, 
+--                     Language.Haskell.Liquid.Predicates, 
+--                     Language.Haskell.Liquid.ACSS, 
+--                     Language.Haskell.Liquid.ANFTransform, 
+--                     Language.Haskell.Liquid.Annotate, 
+--                     Language.Haskell.Liquid.CTags, 
+--                     Language.Haskell.Liquid.CmdLine, 
+--                     Language.Haskell.Liquid.GhcMisc, 
+--                     Language.Haskell.Liquid.Qualifier, 
+--                     Language.Haskell.Liquid.TransformRec, 
+--                     Language.Haskell.Liquid.Tidy, 
+--                     Language.Haskell.Liquid.Types
+--   --ghc-options: -O -W
+--   Extensions: 
 
